fixed chunks; working on schema transfer

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -13,6 +13,7 @@
     {% endblock %}
     <script defer src="/static/scripts/0.chunk.js"></script>
     <script defer src="/static/scripts/1.chunk.js"></script>
+    <script defer src="/static/scripts/2.chunk.js"></script>
     <script defer src="/static/scripts/15.chunk.js"></script>
 
 
