--- a/src/templates/edit_courses.html
+++ b/src/templates/edit_courses.html
@@ -159,9 +159,20 @@
                                         <label for="new-schema-transfer" class="col-12 col-md-4 col-form-label">Schema
                                             transfer</label>
                                         <div class="col-12 col-md-8">
-                                            <select class="form-control" id="new-schema-transfer">
-                                                <option disabled selected value="0">Select a database</option>
-                                            </select>
+                                            <div id="new-schema-transfer-row" class="row">
+                                                <div class="col-6">
+                                                    <select class="form-control" id="new-schema-transfer-course-list">
+                                                        <option disabled selected value="0">Select a course
+                                                        </option>
+                                                    </select>
+                                                </div>
+                                                <div class="col-6">
+                                                    <select class="form-control" id="new-schema-transfer-database-list">
+                                                        <option disabled selected value="0">Select a database
+                                                        </option>
+                                                    </select>
+                                                </div>
+                                            </div>
 
                                             <div class="invalid-feedback"></div>
                                         </div>
@@ -303,9 +314,20 @@
                                         <label for="existing-schema-transfer" class="col-12 col-md-4 col-form-label">Schema
                                             transfer</label>
                                         <div class="col-12 col-md-8">
-                                            <select class="form-control" id="existing-schema-transfer">
-                                                <option disabled selected value="0">Select a database</option>
-                                            </select>
+                                            <div id="existing-schema-transfer-row" class="row">
+                                                <div class="col-6">
+                                                        <select class="form-control" id="existing-schema-transfer-course-list">
+                                                            <option disabled selected value="0">Select a course
+                                                            </option>
+                                                        </select>
+                                                </div>
+                                                <div class="col-6">
+                                                    <select class="form-control" id="existing-schema-transfer-database-list">
+                                                        <option disabled selected value="0">Select a database
+                                                        </option>
+                                                    </select>
+                                                </div>
+                                            </div>
 
                                             <div class="invalid-feedback"></div>
                                         </div>
