--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -6,16 +6,14 @@
     {% block head %}
         <title>Database Administration Bundle</title>
     {% endblock %}
-    {% block stylesheets %}
-        <link rel="stylesheet" href="/static/css/15.css">
-        <link rel="stylesheet" href="/static/css/main.css">
 
-    {% endblock %}
-    <script defer src="/static/scripts/0.chunk.js"></script>
-    <script defer src="/static/scripts/1.chunk.js"></script>
-    <script defer src="/static/scripts/2.chunk.js"></script>
-    <script defer src="/static/scripts/15.chunk.js"></script>
+    {% for nr in cssnumbers %}
+            <link rel="stylesheet" href="/static/css/{{ nr }}.css">
+    {% endfor %}
 
+    {% for nr in jsnumbers %}
+            <script defer src="/static/scripts/{{ nr}}.chunk.js"></script>
+    {% endfor %}
 
     {% block scripts %}
         <script defer src="/static/scripts/main.js"></script>
