--- a/src/frontend/sass/main.sass
+++ b/src/frontend/sass/main.sass
@@ -58,12 +58,13 @@ table
     cursor: pointer
     color: $cyan
 
-.user-row.active, .user-row:active
+tr.active, tr:active
     background-color: $info !important
     color: white !important
     & td
       & a
         color: white !important
+
 
 
 
