--- a/src/templates/edit_courses.html
+++ b/src/templates/edit_courses.html
@@ -165,16 +165,18 @@
                                                         <option disabled selected value="0">Select a course
                                                         </option>
                                                     </select>
+                                                    <div class="invalid-feedback"></div>
+
                                                 </div>
                                                 <div class="col-6">
                                                     <select class="form-control" id="new-schema-transfer-database-list">
                                                         <option disabled selected value="0">Select a database
                                                         </option>
                                                     </select>
+                                                    <div class="invalid-feedback"></div>
                                                 </div>
                                             </div>
 
-                                            <div class="invalid-feedback"></div>
                                         </div>
                                     </div>
                                     {#                        <div class="form-group col-md-6">#}
@@ -261,11 +263,11 @@
                                             <label class="btn btn-secondary active cursor-pointer">
                                                 <input type="radio" name="options" id="existing-schema-radio-none"
                                                        autocomplete="off"
-                                                       checked> No
+                                                > No
                                             </label>
                                             <label class="btn btn-secondary cursor-pointer">
                                                 <input type="radio" name="options" id="existing-schema-radio-textarea"
-                                                       autocomplete="off">
+                                                       autocomplete="off" checked>
                                                 Via text field
                                             </label>
                                             <label class="btn btn-secondary cursor-pointer">
@@ -315,20 +317,25 @@
                                         <div class="col-12 col-md-8">
                                             <div id="existing-schema-transfer-row" class="row">
                                                 <div class="col-6">
-                                                        <select class="form-control" id="existing-schema-transfer-course-list">
-                                                            <option disabled selected value="0">Select a course
-                                                            </option>
-                                                        </select>
+                                                    <select class="form-control"
+                                                            id="existing-schema-transfer-course-list">
+                                                        <option disabled selected value="0">Select a course
+                                                        </option>
+                                                    </select>
+                                                    <div class="invalid-feedback"></div>
+
                                                 </div>
                                                 <div class="col-6">
-                                                    <select class="form-control" id="existing-schema-transfer-database-list">
+                                                    <select class="form-control"
+                                                            id="existing-schema-transfer-database-list">
                                                         <option disabled selected value="0">Select a database
                                                         </option>
                                                     </select>
+                                                    <div class="invalid-feedback"></div>
+
                                                 </div>
                                             </div>
 
-                                            <div class="invalid-feedback"></div>
                                         </div>
                                     </div>
 
