started writing "missing databases" feature

--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -43,6 +43,7 @@
                     {% if role == 0 %}
                         <a class="dropdown-item text-danger" id="navbar-dump-all-databases" href="#">Generate
                             migrations</a>
+                        <a class="dropdown-item text-danger" id="navbar-missing-databases" href="#">View missing databases</a>
 
                         <div class="dropdown-divider" id="navbar-options-dropdown-divider"></div>
                     {% endif %}
