--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -43,7 +43,8 @@
                     {% if role == 0 %}
                         <a class="dropdown-item text-danger" id="navbar-dump-all-databases" href="#">Generate
                             migrations</a>
-                        <a class="dropdown-item text-danger" id="navbar-missing-databases" href="#">View missing databases</a>
+                        <a class="dropdown-item text-danger" id="navbar-missing-databases" href="#">View missing
+                            databases</a>
 
                         <div class="dropdown-divider" id="navbar-options-dropdown-divider"></div>
                     {% endif %}
@@ -67,3 +68,30 @@
         {#        </div>#}
     </div>
 </nav>
+{% if role == 0 %}
+    <!-- Edit User Role Modal -->
+    <div class="modal fade" id="editUserRoleModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Edit Role</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span>&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Change user role to:
+                    <select id="selected_role" class=custom-select">
+                        <option value="0" selected>Admin</option>
+                        <option value="1">Teacher</option>
+                        <option value="2">Student</option>
+                    </select>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Decline</button>
+                    <button id="change_role" type="button" class="btn btn-primary">Confirm</button>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endif %}
