--- a/src/templates/edit_courses.html
+++ b/src/templates/edit_courses.html
@@ -349,7 +349,11 @@
                                                 </button>
                                             </div>
                                         {% endif %}
-                                        <div class="center-block col-12 col-md-4 my-2 my-md-4 d-flex">
+                                        <div class="center-block col-12
+                                        {% if role < 2 %}
+                                        col-md-4 my-2 my-md-4
+                                        {% endif %}
+                                         d-flex">
                                             <button id="edit-course-button"
                                                     class="btn btn-info reset-button btn-block">Save changes
                                             </button>
