started adding documentation to edit course page edited some html strings

--- a/src/templates/student_view.html
+++ b/src/templates/student_view.html
@@ -62,7 +62,7 @@
                                 <p class="h2" id="have-credentials-coursename">Have credentials coursename</p>
                                 <p class="text-center small mb-2" id="have-credentials-courseinfo">Have credentials
                                     courseinfo</p>
-                                <p id="have-credentials-status" class="text-center text-success">You already have
+                                <p id="have-credentials-status" class="text-center text-success">You have
                                     credentials for this course</p>
                                 <hr>
                                 <p class="text-center mb-2" id="have-credentials-database-info">
