fixed FID display (except on creation of course and list of databases)

--- a/src/templates/edit_users.html
+++ b/src/templates/edit_users.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block scripts %}
-    <script defer src="/static/scripts/user.js"></script>
+    <script defer src="/static/scripts/edit_users.js"></script>
 {% endblock %}
 
 <!-- - Inspect datails
