--- a/src/templates/edit_courses.html
+++ b/src/templates/edit_courses.html
@@ -236,9 +236,9 @@
                                             owner ID
                                             (optional)</label>
                                         <div class="col-12 col-md-8">
-                                            <input type="number" name="course-fid-field" class="form-control"
+                                            <input type="text" name="course-fid-field" class="form-control"
                                                    id="existing-course-fid-field"
-                                                   oninput="this.value=this.value.replace(/[^0-9]/g,'');" readonly>
+                                                   readonly>
 
                                             <div class="invalid-feedback"></div>
                                         </div>
