--- a/src/templates/edit_courses.html
+++ b/src/templates/edit_courses.html
@@ -231,9 +231,9 @@
                                             <div class="invalid-feedback"></div>
                                         </div>
                                     </div>
+                                    {% if who.role < 2 %}
                                     <div class="form-group row align-items-center mb-4">
-                                        <label for="course-fid-field" class="col-12 col-md-4 col-form-label">Course
-                                            owner ID
+                                        <label for="course-fid-field" class="col-12 col-md-4 col-form-label">Course                                             owner ID
                                             (optional)</label>
                                         <div class="col-12 col-md-8">
                                             <input type="text" name="course-fid-field" class="form-control"
@@ -243,6 +243,7 @@
                                             <div class="invalid-feedback"></div>
                                         </div>
                                     </div>
+                                    {% endif %}
                                     <div class="form-group row align-items-center mb-4">
                                         <label for="active-field" class="col-12 col-md-4 col-form-label">Active?</label>
                                         <div class="col-12 col-md-8">
