fixed some errors polished edit course button

--- a/src/templates/edit_courses.html
+++ b/src/templates/edit_courses.html
@@ -231,7 +231,7 @@
                                             <div class="invalid-feedback"></div>
                                         </div>
                                     </div>
-                                    {% if who.role < 2 %}
+                                    {% if role < 2 %}
                                     <div class="form-group row align-items-center mb-4">
                                         <label for="course-fid-field" class="col-12 col-md-4 col-form-label">Course                                             owner ID
                                             (optional)</label>
