polished edit course

--- a/src/templates/edit_courses.html
+++ b/src/templates/edit_courses.html
@@ -233,8 +233,7 @@
                                     </div>
                                     {% if role < 2 %}
                                     <div class="form-group row align-items-center mb-4">
-                                        <label for="course-fid-field" class="col-12 col-md-4 col-form-label">Course                                             owner ID
-                                            (optional)</label>
+                                        <label for="course-fid-field" class="col-12 col-md-4 col-form-label">Course owner</label>
                                         <div class="col-12 col-md-8">
                                             <input type="text" name="course-fid-field" class="form-control"
                                                    id="existing-course-fid-field"
