added hint badges

--- a/src/frontend/sass/main.sass
+++ b/src/frontend/sass/main.sass
@@ -36,6 +36,15 @@ a
       background-color: lightgray !important
       pointer-events: none
 
+.badge-light
+  &.inactive
+    background-color: #f2f2f2
+  &.inactive-you
+    background-color: #a9cfbf
+  &.you
+    background-color: #d0ffcd
+
+
 
 .invalid-feedback
   display: block !important
