fixed table header

--- a/src/templates/edit_users.html
+++ b/src/templates/edit_users.html
@@ -37,10 +37,10 @@
                                            class="table table-sm table-hover table-fixed table-borderless table-striped">
                                         <thead class="bg-dark text-light sticky-top">
                                         <tr>
-                                            <th class="th-sm" scope="col">#</th>
-                                            <th class="th-sm" scope="col">Role</th>
-                                            <th class="th-sm" scope="col">E-Mail</th>
-                                            <th class="th-sm" scope="col">Verified</th>
+                                            <th class="th-sm bg-dark" scope="col">#</th>
+                                            <th class="th-sm bg-dark" scope="col">Role</th>
+                                            <th class="th-sm bg-dark" scope="col">E-Mail</th>
+                                            <th class="th-sm bg-dark" scope="col">Verified</th>
                                         </tr>
                                         </thead>
                                         <tbody id="users" class="nav-pills" role="tablist">
