--- a/src/frontend/sass/main.sass
+++ b/src/frontend/sass/main.sass
@@ -52,15 +52,19 @@ a
 #alert-div
   @extend .text-center
 
-//.tableFixHead
-//  & thead th
-//    position: sticky
-//    top: 0
-//
+.tableFixHead
+  overflow: auto
 
-.table
-  & th td
-    border-top: 0px
+.tableFixHead
+  & thead
+    position: sticky
+    top: 0
+    & th
+      position: sticky
+      top: 0
+
+th td
+    padding: 8px 16px
 
 table
   border-collapse: collapse
