ghost databases is tested and working

--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -92,8 +92,8 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button id="delete-missing-database-button" type="button" class="btn btn-info">Delete the selected database</button>
-                    <button id="delete-all-missing-databases-button" type="button" class="btn btn-danger">Delete all ghost databases</button>
+                    <button id="delete-missing-database-button" type="button" class="btn btn-info" data-dismiss="modal">Delete the selected database</button>
+                    <button id="delete-all-missing-databases-button" type="button" class="btn btn-danger" data-dismiss="modal">Delete all ghost databases</button>
                 </div>
             </div>
         </div>
