--- a/src/templates/edit_courses.html
+++ b/src/templates/edit_courses.html
@@ -19,7 +19,7 @@
                         <!-- Website title -->
                         <h2>Course list</h2>
                         {% if role < 2 %}
-                            <a data-toggle="pill" href="#" id="add-course-link">Add course</a>
+                            <a class="small" data-toggle="pill" href="#" id="add-course-link">Add course</a>
                         {% endif %}
                         <br>
                         <span class="badge">Normal course</span>
