--- a/src/templates/edit_users.html
+++ b/src/templates/edit_users.html
@@ -28,6 +28,8 @@
                         <div class="row d-flex flex-column">
                             <div class="col-12"><h3>Users</h3></div>
                             <div class="col-12">
+                                                            <a class="small" data-toggle="pill" href="#" id="add-user-link">Add user</a>
+
                                 <hr>
                             </div>
                             <div class="col-12 d-flex flex-column flex-grow-1">
@@ -57,7 +59,7 @@
 
                     <div class=" center-block
     container border border-dark rounded-lg shadow-lg bg-white p-3 py-lg-5 text-center">
-                                                                                        <div id="alert-div"></div>
+                        <div id="alert-div"></div>
 
                         <div class="tab-content" id="users-tabs">
 
@@ -96,12 +98,13 @@
 
                                         <div class="col-12 col-lg-4">
                                             <button id="edit-button" type="button" class="btn btn-secondary btn-block"
-                                                    >
+                                            >
                                                 Edit Role
                                             </button>
                                         </div>
                                         <div class="col-12 col-lg-4">
-                                            <button id="delete-button" type="button" class="mt-3 mt-lg-0 btn btn-danger btn-block">
+                                            <button id="delete-button" type="button"
+                                                    class="mt-3 mt-lg-0 btn btn-danger btn-block">
                                                 Delete User
                                             </button>
                                         </div>
@@ -162,6 +165,51 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="tab-pane" id="add-user-pane">
+                                <form class="p-5 form-horizontal" id="content"> {# actual content #}
+                                    <p class="text-center h4 mb-4">Register</p>
+                                    <hr/>
+                                    <div class="mt-5 form-group row align-items-center">
+                                        <label for="email" class="col-12 col-md-4 col-form-label">UT e-mail
+                                            address</label>
+                                        <div class="col-12 col-md-8 align-middle">
+                                            <input type="email" name="mail" class="form-control my-1"
+                                                   id="register-email-field"
+                                                   autofocus="True" maxlength="256" required>
+                                            <div class="invalid-feedback"></div>
+                                        </div>
+
+                                    </div>
+                                    <div class="form-group row align-items-center">
+                                        <label for="password" class="col-12 col-md-4 col-form-label">Password</label>
+                                        <div class="col-12 col-md-8">
+                                            <input type="password" name="password" class="form-control"
+                                                   id="register-password-field"
+                                                   required>
+                                            <div class="invalid-feedback"></div>
+                                        </div>
+                                    </div>
+                                    <div class="form-group row align-items-center mb-4">
+                                        <label for="passwordConfirm" class="col-12 col-md-4 col-form-label">Confirm
+                                            Password</label>
+                                        <div class="col-12 col-md-8">
+                                            <input type="password" name="passwordConfirm" class="form-control"
+                                                   id="register-password-confirm-field" required>
+                                            <div class="invalid-feedback"></div>
+                                        </div>
+                                    </div>
+                                    <p class="text-center small mb-2">Please use a password that has 8 characters or
+                                        more, and contains
+                                        at least one lowercase letter, one uppercase letter, and one number</p>
+                                    <hr>
+                                    <button type='submit' class="btn btn-info btn-block mt-5 mb-1 col-md-6 offset-md-3"
+                                            id="register-button">Register
+                                    </button>
+                                    <div class="mt-5 align-items-center center-block " id="alert-div"></div>
+                                </form>
+
+
                             </div>
 
                         </div>
