--- a/src/templates/edit_users.html
+++ b/src/templates/edit_users.html
@@ -28,7 +28,7 @@
                         <div class="row d-flex flex-column">
                             <div class="col-12"><h3>Users</h3></div>
                             <div class="col-12">
-                                                            <a class="small" data-toggle="pill" href="#" id="add-user-link">Add user</a>
+                                <a class="small" data-toggle="pill" href="#" id="add-user-link">Add user</a>
 
                                 <hr>
                             </div>
@@ -167,15 +167,15 @@
                                 </div>
                             </div>
                             <div class="tab-pane" id="add-user-pane">
-                                <form class="p-5 form-horizontal" id="content"> {# actual content #}
-                                    <p class="text-center h4 mb-4">Register</p>
+                                <form class="form-horizontal" id="content"> {# actual content #}
+                                    <p class="text-center h4 mb-4">Add user</p>
                                     <hr/>
                                     <div class="mt-5 form-group row align-items-center">
                                         <label for="email" class="col-12 col-md-4 col-form-label">UT e-mail
                                             address</label>
                                         <div class="col-12 col-md-8 align-middle">
                                             <input type="email" name="mail" class="form-control my-1"
-                                                   id="register-email-field"
+                                                   id="add-user-email-field"
                                                    autofocus="True" maxlength="256" required>
                                             <div class="invalid-feedback"></div>
                                         </div>
@@ -185,7 +185,7 @@
                                         <label for="password" class="col-12 col-md-4 col-form-label">Password</label>
                                         <div class="col-12 col-md-8">
                                             <input type="password" name="password" class="form-control"
-                                                   id="register-password-field"
+                                                   id="add-user-password-field"
                                                    required>
                                             <div class="invalid-feedback"></div>
                                         </div>
@@ -195,7 +195,18 @@
                                             Password</label>
                                         <div class="col-12 col-md-8">
                                             <input type="password" name="passwordConfirm" class="form-control"
-                                                   id="register-password-confirm-field" required>
+                                                   id="add-user-password-confirm-field" required>
+                                            <div class="invalid-feedback"></div>
+                                        </div>
+                                    </div>
+                                    <div class="form-group row align-items-center mb-4">
+                                        <label for="add-user-role" class="col-12 col-md-4 col-form-label">Role</label>
+                                        <div class="col-12 col-md-8">
+                                            <select id="add-user-role" class="form-control">
+                                                <option value="2">Student</option>
+                                                <option value="1">Teacher</option>
+                                                <option value="0">Admin</option>
+                                            </select>
                                             <div class="invalid-feedback"></div>
                                         </div>
                                     </div>
@@ -204,7 +215,7 @@
                                         at least one lowercase letter, one uppercase letter, and one number</p>
                                     <hr>
                                     <button type='submit' class="btn btn-info btn-block mt-5 mb-1 col-md-6 offset-md-3"
-                                            id="register-button">Register
+                                            id="add-user-button">Add user
                                     </button>
                                     <div class="mt-5 align-items-center center-block " id="alert-div"></div>
                                 </form>
