--- a/src/templates/edit_users.html
+++ b/src/templates/edit_users.html
@@ -167,7 +167,7 @@
                                 </div>
                             </div>
                             <div class="tab-pane" id="add-user-pane">
-                                <form class="form-horizontal" id="content"> {# actual content #}
+                                <form class="form-horizontal" id="add-user-form"> {# actual content #}
                                     <p class="text-center h4 mb-4">Add user</p>
                                     <hr/>
                                     <div class="mt-5 form-group row align-items-center">
