fix safari specific issue

--- a/src/templates/edit_courses.html
+++ b/src/templates/edit_courses.html
@@ -10,7 +10,7 @@
 
 
 {% block content %}
-    <div class="vh-100 d-flex flex-column">
+    <div class="d-flex flex-column">
         {% include 'navbar.html' %}
         <div class="container-fluid d-flex py-3 py-md-5 flex-grow-1">
             <div class="row px-0 px-md-5 center-block flex-row flex-grow-1">
