--- a/src/templates/edit_users.html
+++ b/src/templates/edit_users.html
@@ -15,7 +15,7 @@
 - Change role -->
 
 {% block content %}
-    <div class="vh-100 d-flex flex-column">
+    <div class="d-flex flex-column">
         {% include 'navbar.html' %}
 
         <div class="container-fluid py-3 py-lg-5 flex-grow-1 d-flex px-2 px-lg-5 ">
