fixed typos removed vh-100

--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="vh-100 d-flex flex-column">
+    <div class="d-flex flex-column">
         {% include 'navbar.html' %}
         <div class="container-fluid py-3 py-md-5">
             {#        <div class="row">#}
