--- a/src/templates/change_password.html
+++ b/src/templates/change_password.html
@@ -10,7 +10,7 @@
 
 
 {% block content %}
-    <div class="vh-100 d-flex flex-column">
+    <div class="d-flex flex-column">
         {% include 'navbar.html' %}
         <div class="container-fluid py-3 py-md-5">
             <div class="row">
