--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -21,5 +21,34 @@
 <body>
 <template id="url-prefix" class="/{{ url_prefix }}"></template>
 {% block content %}{% endblock %}
+<!-- Modal -->
+<div class="modal fade" id="manualModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">
+            Download manual pdf
+        </h5>
+        <button type="button" class="close" data-dismiss="modal">
+          <span>&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+          <ul>
+            {% if role == 2 %}
+                <li><a href="/static/Manual(student).pdf" download>Student Manual</a></li>
+                <li><a href="/static/Manual(TA).pdf" download>TA Manual</a></li>
+            {% endif %}
+            {% if role == 1 %}
+                <li><a href="/static/Manual(teacher).pdf" download>Teacher Manual</a></li>
+            {% endif %}
+            {% if role == 0 %}
+                <li><a href="/statsic/Manual(admin).pdf" download>Admin Manual</a></li>
+            {% endif %}
+          </ul>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
