--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -34,6 +34,11 @@
 
         </ul>
         <ul class="navbar-nav float-left float-lg-right ">
+            <li class="nav-item">
+                <a class="nav-link" href="" data-toggle="modal" data-target="#manualModal" title="Need help? Read our manual!">
+                    <strong>?</strong>
+                </a>
+            </li>
             <li class="nav-item dropdown ">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                    aria-haspopup="true" aria-expanded="false">
@@ -54,7 +59,6 @@
                            onclick="document.getElementById('logout-form').submit();">Log
                             out</a>
                     </form>
-
                 </div>
             </li>
         </ul>
